Table pharmacies as p {
  pharmacy_id uuid [pk, default: `gen_random_uuid()`]
  pharmacy_name varchar [not null, unique]
  user_id uuid [not null, unique, ref: > u.user_id]
  created_at timestamptz [not null, default: `now()`]
}


Table pharmacy_branches as pb {
  pharmacy_branch_id uuid [pk, default: `gen_random_uuid()`]
  pharmacy_id uuid [not null, ref:> p.pharmacy_id]
  pharmacy_branch_name varchar [not null, unique]
  city varchar [not null]
  sub_city varchar [not null]
  special_location_name varchar [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table users as u {
  user_id uuid [pk, default: `gen_random_uuid()`]
  username varchar [unique, not null]
  password varchar [not null]
  email varchar [unique, not null]
  role varchar [not null, default: "ADMIN"]
  created_at timestamptz [not null, default: `now()`]
}


Table drugs as d {
  drug_id uuid [pk, default: `gen_random_uuid()`]
  pharmacy_branch_id uuid [not null, ref: > pb.pharmacy_branch_id]
  brand_name varchar [not null, unique]
  generic_name varchar [not null]
  quantity bigint [not null]
  expiration_date timestamptz [not null]
  manufacturing_date timestamptz [not null]
  pharmacist_id uuid [not null, ref: > ph.pharmacist_id]
  added_at timestamptz [not null, default: `now()`]
}

Table pharmacists as ph {
  pharmacist_id uuid [pk, default: `gen_random_uuid()`]
  pharmacy_branch_id uuid [ref: > pb.pharmacy_branch_id, not null]
  username varchar [unique, not null]
  password varchar [not null]
  email varchar [unique, not null]
  role varchar [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table user_sessions {
    session_id uuid [not null, pk]
    user_id uuid [not null, ref: > u.user_id]
    refresh_token varchar [not null]
    is_blocked bool [not null, default: false]
    expires_at timestamptz [not null]
    created_at timestamptz [not null, default: `now()`]
}

Table pharmacist_sessions {
    session_id uuid [not null, pk]
    pharmacist_id uuid [not null, ref: > ph.pharmacist_id]
    refresh_token varchar [not null]
    is_blocked bool [not null, default: false]
    expires_at timestamptz [not null]
    created_at timestamptz [not null, default: `now()`]
}